# BeeCord

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: main.yaml
src/: app.html  sw.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media.rs
src/lib/: index.js  types.d.ts
src/lib/components/: SecretStorageModal.svelte  app-sidebar.svelte  avatar.svelte  chat.svelte  create-room-menu.svelte  create-space-dialog.svelte  flicker-grid.svelte  message.svelte  right-sidebar.svelte  room.svelte  top-bar.svelte  verification-modal.svelte
src/lib/components/calls/: element-call-widget.svelte
src/lib/components/messages/: audio.svelte  file.svelte  image.svelte  index.ts  message-list.svelte  poll.svelte  sticker.svelte  text.svelte  video.svelte
src/lib/components/room-types/: call.svelte  invite.svelte
src/lib/components/ui/chat/: chat-input.svelte  chat-input.svelte.d.ts  chat-message-list.svelte  chat-message-list.svelte.d.ts  file-upload-overlay.svelte  index.js  message-loading.svelte  message-loading.svelte.d.ts
src/lib/components/ui/sidebar/: context.svelte.ts  sidebar.svelte
src/lib/stores/: BeeCord.svelte.ts  Calls.svelte.ts  Matrix.svelte.ts  Rooms.svelte.ts  SecretStorage.svelte.ts  Sidebars.svelte.ts  Verification.svelte.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/app/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
(+28 files in other folders)
